@@ -23,6 +23,13 @@
  * @todo	Use hook functions to allow others to hook in here
  */
 
+	// File Logger
+TodoyuLogger::addLogger('TodoyuLoggerFile', array(
+	'file'	=> PATH . '/log/error.log'
+));
+	// FirePhp Logger
+TodoyuLogger::addLogger('TodoyuLoggerFirePhp');
+
 	// Add form include path
 Todoyu::addIncludePath( PATH_CORE . '/model/form' );
 	// Add document include path
@@ -36,12 +43,6 @@ if( Todoyu::$CONFIG['INIT'] ) {
 	// Add all paths of installed extensions to autoload
 TodoyuExtensions::addAllExtensionAutoloadPaths();
 
-	// File Logger
-TodoyuLogger::addLogger('TodoyuLoggerFile', array(
-	'file'	=> PATH . '/log/error.log'
-));
-	// FirePhp Logger
-TodoyuLogger::addLogger('TodoyuLoggerFirePhp');
 
 	// Custom config overrides
 require_once( PATH_LOCALCONF . '/override.php');
