@@ -13,6 +13,7 @@ core 2.1.1 - ???
 	* Changed: Updated highcharts library to 2.1.6
 	* Changed: Updated tinyMCE to 3.4.3.2
 	* Changed: <a>-tags are now removed from RTE when saving (autolink function rebuilds them when necessary for output)
+	* Changed: Logger init position. Init before todoyu is initialized to log init errors. Added check if file logger has a problem. Check for resource instead null
 
 
 core 2.1.0 - 2011-06-17
